--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -29,23 +29,30 @@
                 <Grid x:Name="ContentRow" Grid.Row="0">
                     <StackPanel HorizontalAlignment="Stretch">
                         <TextBlock Style="{StaticResource DialogH1Style}" Text="{Binding Title}" />
-                        <DockPanel  HorizontalAlignment="Stretch">
+                        <DockPanel HorizontalAlignment="Stretch">
                             <TextBlock HorizontalAlignment="Left">Password/-phrase:</TextBlock>
-                            <TextBlock HorizontalAlignment="Right" Text="{Binding SignificantCharCountText}"/>
+                            <TextBlock HorizontalAlignment="Right" Text="{Binding SignificantCharCountText}" />
                         </DockPanel>
-                        <TextBox Name="PwBox" TextChanged="Password_Changed" x:FieldModifier="private" 
+                        <TextBox Name="PwBox" TextChanged="Password_Changed" x:FieldModifier="private"
                                  AcceptsTab="False"
                                  TextWrapping="Wrap"
                                  VerticalScrollBarVisibility="Visible"
                                  AcceptsReturn="True"
-                                 Height="70"  MaxHeight="70"/>
-                        <TextBlock><Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink> from 256 Bit Random Data.</TextBlock>
+                                 Height="70" MaxHeight="70" />
+                        <TextBlock>
+                            <Hyperlink Click="Hyperlink_CreatePassword_OnClick">Generate Password</Hyperlink>
+                            from 256 Bit Random Data.
+                        </TextBlock>
                         <TextBlock />
-                        <TextBlock>Read more about <Hyperlink ToolTip="{Binding Source={x:Static app:Constants.PWSpecUrl}, Mode=OneWay}" Click="Hyperlink_ReadPWSpec_OnClick">VisualCrypt Passwords</Hyperlink>.</TextBlock>
-                      
-                      
-                       
-                      
+                        <TextBlock>
+                            Read more about
+                            <Hyperlink ToolTip="{Binding Source={x:Static app:Constants.PWSpecUrl}, Mode=OneWay}"
+                                       Click="Hyperlink_ReadPWSpec_OnClick">
+                                VisualCrypt Passwords
+                            </Hyperlink>
+                            .
+                        </TextBlock>
+
 
                     </StackPanel>
                 </Grid>
@@ -57,7 +64,7 @@
                         <Button Content="Cancel" Click="Button_Click" />
                         <Button HorizontalAlignment="Right" Content="Set" x:Name="ButtonOk" IsDefault="True"
                                 Command="{Binding SetPasswordCommand}" />
-                       
+
                     </StackPanel>
                 </Grid>
             </Grid>
