--- a/VisualCrypt.Desktop/Views/EncryptedBar.xaml
+++ b/VisualCrypt.Desktop/Views/EncryptedBar.xaml
@@ -1,12 +1,11 @@
 ﻿<UserControl x:Class="VisualCrypt.Desktop.Views.EncryptedBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:files="clr-namespace:VisualCrypt.Desktop.Shared.Files;assembly=VisualCrypt.Desktop.Shared"
-             xmlns:portable="clr-namespace:VisualCrypt.Cryptography.Portable;assembly=VisualCrypt.Language"
              xmlns:language="clr-namespace:VisualCrypt.Language;assembly=VisualCrypt.Language"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary
@@ -14,35 +13,41 @@
     </UserControl.Resources>
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"></ColumnDefinition>
-            <ColumnDefinition Width="Auto"></ColumnDefinition>
-            <ColumnDefinition Width="*"></ColumnDefinition>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="Auto" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <TextBlock Grid.Column="0" Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=EncrytedBarText}" />
+        <TextBlock Grid.Column="0"
+                   Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=EncrytedBarText}" />
         <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
             <TextBlock>
                 <Hyperlink Click="Hyperlink_SetPassword_Click">
-                    <Run Text="{Binding Source={x:Static files:PasswordManager.PasswordInfo}, Path=PasswordStatus, Mode=OneWay}" />
+                    <Run
+                        Text="{Binding Source={x:Static files:PasswordManager.PasswordInfo}, Path=PasswordStatus, Mode=OneWay}" />
                 </Hyperlink>
-                <Hyperlink  Click="Hyperlink_ClearPassword_MouseDown">
-                    <TextBlock Padding="0" Margin="0" FontWeight="Normal" FontFamily="WebDings" Visibility="{Binding Source={x:Static files:PasswordManager.PasswordInfo}, Path=TextBlockClearPasswordVisibility}">
-                        r</TextBlock>
+                <Hyperlink Click="Hyperlink_ClearPassword_MouseDown">
+                    <TextBlock Padding="0" Margin="0" FontWeight="Normal" FontFamily="WebDings"
+                               Visibility="{Binding Source={x:Static files:PasswordManager.PasswordInfo}, Path=TextBlockClearPasswordVisibility}">
+                        r
+                    </TextBlock>
                 </Hyperlink>
             </TextBlock>
         </StackPanel>
         <StackPanel Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <TextBlock>
-                <Hyperlink Click="Hyperlink_CopyAll_Click"> <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termCopyToClipboard,Mode=OneWay}"></Run>
+                <Hyperlink Click="Hyperlink_CopyAll_Click">
+                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termCopyToClipboard,Mode=OneWay}" />
                 </Hyperlink>
-                <Run xml:space="preserve"> </Run>
-                <Hyperlink  Click="Hyperlink_Decrypt_Click">
-                  <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termDecrypt,Mode=OneWay}"></Run>
+                <Run xml:space="preserve" />
+                <Hyperlink Click="Hyperlink_Decrypt_Click">
+                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termDecrypt,Mode=OneWay}" />
                 </Hyperlink>
-                 <Run xml:space="preserve"> </Run>
-                 <Hyperlink  Click="Hyperlink_Save_Click" IsEnabled="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=IsDirty}">
-                   <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termSave,Mode=OneWay}"></Run>
+                <Run xml:space="preserve" />
+                <Hyperlink Click="Hyperlink_Save_Click"
+                           IsEnabled="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=IsDirty}">
+                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termSave,Mode=OneWay}" />
                 </Hyperlink>
-                 <Run xml:space="preserve"> </Run>
+                <Run xml:space="preserve" />
             </TextBlock>
         </StackPanel>
     </Grid>
