--- a/VisualCrypt.Desktop/Views/WorkingBar.xaml
+++ b/VisualCrypt.Desktop/Views/WorkingBar.xaml
@@ -1,12 +1,12 @@
 ﻿<UserControl x:Class="VisualCrypt.Desktop.Views.WorkingBar"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:files="clr-namespace:VisualCrypt.Desktop.Shared.Files;assembly=VisualCrypt.Desktop.Shared"
-             
+
              xmlns:language="clr-namespace:VisualCrypt.Language;assembly=VisualCrypt.Language"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
         <ResourceDictionary
@@ -16,14 +16,16 @@
         <StackPanel Orientation="Horizontal" Grid.Column="0">
             <TextBlock>
                 <Hyperlink Click="WorkingBar_Cancel_Click">
-                 <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termCancel,Mode=OneWay}"></Run>
-            </Hyperlink>
+                    <Run Text="{Binding Source={x:Static language:Loc.Strings},Path=termCancel,Mode=OneWay}" />
+                </Hyperlink>
             </TextBlock>
 
-            <ProgressBar Width="150" Height="8" Margin="5,4,5,0" IsIndeterminate="False" Foreground="#FF77FF77"  BorderThickness="0" Background="{DynamicResource BarColorBrush}" Value="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=ProgressPercent}"></ProgressBar>
+            <ProgressBar Width="150" Height="8" Margin="5,4,5,0" IsIndeterminate="False" Foreground="#FF77FF77"
+                         BorderThickness="0" Background="{DynamicResource BarColorBrush}"
+                         Value="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=ProgressPercent}" />
             <TextBlock>
-                 <Run Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=ProgressBarOpName}"/>
-            <Run Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=ProgressMessage}"/>
+                <Run Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=ProgressBarOpName}" />
+                <Run Text="{Binding Source={x:Static files:FileManager.BindableFileInfo}, Path=ProgressMessage}" />
             </TextBlock>
         </StackPanel>
 
