--- a/VisualCrypt.Windows/Pages/MainPage.xaml
+++ b/VisualCrypt.Windows/Pages/MainPage.xaml
@@ -4,6 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:VisualCrypt.Windows.Controls"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -24,6 +25,7 @@
             </StackPanel>
 
         </StackPanel>
-        <TextBox Grid.Row="1" x:Name="_textBox1" AcceptsReturn="True"></TextBox>
+        <controls:Editor Grid.Row="1"></controls:Editor>
+       
     </Grid>
 </Page>
