porting .net features to UWP app...

--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -5,7 +5,7 @@
                     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                     xmlns:views="clr-namespace:VisualCrypt.Desktop.Views"
                     xmlns:controls="clr-namespace:VisualCrypt.Desktop.Shared.Controls;assembly=VisualCrypt.Desktop.Shared"
-                    xmlns:app="clr-namespace:VisualCrypt.Desktop.Shared.App;assembly=VisualCrypt.Desktop.Shared"
+                    xmlns:language="clr-namespace:VisualCrypt.Language;assembly=VisualCrypt.Language"
                     mc:Ignorable="d"
                     Title="Set Password" Height="300" Width="500" WindowStartupLocation="CenterOwner"
                     d:DataContext="{d:DesignInstance views:SetPasswordDialog}"
@@ -46,7 +46,7 @@
                         <TextBlock />
                         <TextBlock>
                             Read more about
-                            <Hyperlink ToolTip="{Binding Source={x:Static app:Constants.PWSpecUrl}, Mode=OneWay}"
+                            <Hyperlink ToolTip="{Binding Source={x:Static language:Loc.Strings},Path=.uriPWSpecUrl, Mode=OneWay}"
                                        Click="Hyperlink_ReadPWSpec_OnClick">
                                 VisualCrypt Passwords
                             </Hyperlink>
