--- a/VisualCrypt.Windows/Pages/MainPage.xaml
+++ b/VisualCrypt.Windows/Pages/MainPage.xaml
@@ -8,9 +8,13 @@
     NavigationCacheMode="Disabled"
     mc:Ignorable="d">
     <Page.TopAppBar>
-        <CommandBar>
+        <CommandBar IsOpen="True" IsSticky="True">
             <AppBarButton Label="Encrypt" Command="{x:Bind _viewModel.EncryptEditorContentsCommand}" Icon="Permissions" />
             <AppBarButton Label="Decrypt" Command="{x:Bind _viewModel.DecryptEditorContentsCommand}" Icon="View" />
+            <AppBarButton Label="Save" Command="{x:Bind _viewModel.SaveCommand}" Icon="SaveLocal" />
+            <AppBarButton Label="Save As" Command="{x:Bind _viewModel.SaveAsCommand}" Icon="Save" />
+            <AppBarButton Label="Export Cleartex" Command="{x:Bind _viewModel.ExportCommand}" Icon="View" />
+            <AppBarButton Width="Auto" Label="{x:Bind _viewModel.PasswordInfo.HyperlinkPasswordText, Mode=OneWay}" Command="{x:Bind _viewModel.PasswordCommand}" Icon="HideBcc" />
         </CommandBar>
     </Page.TopAppBar>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
@@ -25,13 +29,20 @@
                     Margin="0,0,8,0"
                         Command="{x:Bind _viewModel.GoBackToFilesCommand}"
                     AutomationProperties.Name="Back" />
-                <TextBlock Style="{ThemeResource TitleTextBlockStyle}"
-                       Margin="0,8"
-                        />
+                <TextBlock Style="{ThemeResource TitleTextBlockStyle}" Margin="0,8" />
+                <ProgressBar Width="150" Height="8" 
+                             Margin="5,4,5,0" 
+                             IsIndeterminate="False" 
+                             Foreground="#FF77FF77"
+                             BorderThickness="0" 
+                             Value="{x:Bind _viewModel.FileInfo.ProgressPercent, Mode=OneWay}" />
+                <TextBlock>
+                <Run Text="{x:Bind _viewModel.FileInfo.ProgressBarOpName, Mode=OneWay}" />
+                <Run Text="{x:Bind _viewModel.FileInfo.ProgressMessage, Mode=OneWay}" />
+                </TextBlock>
             </StackPanel>
 
         </StackPanel>
-        <controls:Editor Grid.Row="1"></controls:Editor>
-
+        <controls:Editor x:Name="EditorControl" Grid.Row="1"></controls:Editor>
     </Grid>
 </Page>
