Refactorings for more reuse across platforms

--- a/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
+++ b/VisualCrypt.Desktop/Views/SetPasswordDialog.xaml
@@ -46,8 +46,9 @@
                         <TextBlock />
                         <TextBlock>
                             Read more about
-                            <Hyperlink ToolTip="{Binding Source={x:Static language:Loc.Strings},Path=.uriPWSpecUrl, Mode=OneWay}"
-                                       Click="Hyperlink_ReadPWSpec_OnClick">
+                            <Hyperlink
+                                ToolTip="{Binding Source={x:Static language:Loc.Strings},Path=.uriPWSpecUrl, Mode=OneWay}"
+                                Click="Hyperlink_ReadPWSpec_OnClick">
                                 VisualCrypt Passwords
                             </Hyperlink>
                             .
